# dictionariums

./: Cargo.toml  dictionarium.js  dictionarium_bg.js  index.html
src/: dictionarium-de.txt  dictionarium.txt  esperanto.txt  main.rs  tchek.txt
