[package]
name = "roguelike"
version = "0.1.0"
authors = ["Dhghomon <56599343+Dhghomon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19"
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
rayon = "1.5.0"